# SMILESBOX

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
example/: POSCAR.vasp  example.ipynb
notebooks/: POSCAR.vasp  example.ipynb  test.vasp  test.vesta
smilesbox/: cli.py  smilesbox.py
src/smilesbox/: smilesbox.py
